--- a/index.html
+++ b/index.html
@@ -1,17 +1,37 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>WSP: Firstname Lastname</title>
-	<link rel="stylesheet" type="text/css" href="css/reset.css" />
+	<title>WSP: Janay Peters</title>
+	<!-- <link rel="stylesheet" type="text/css" href="css/reset.css" /> -->
 	<link rel="stylesheet" type="text/css" href="css/main.css" />
 </head>
 <body>
-
 	<!-- Header -->
-	
-	<!-- About -->	
+	<h1>Janay Peters</h1>
+		<img src="me.JPG" alt="Janay"/>
+
+	<!-- About -->
+	<h2>About Me</h2>
+		<p> My name is Janay Peters and I currently live in Atlanta,Ga. I was born in Mobile,Al and have lived in Georgia for 8 years now.
+	I love to play tennis and dance; I've had a love for technology my whole life, but didn't know that I wanted to go into Web Design
+	until my sophomore year in high school. I love Full Sail University and am so happy to attend this awesome school.</p>
+
 
 	<!-- Blog, Components -->
+
+	<!-- Component 1-->
+	<h2>Component 1: Header Navigation Bar</h2>
+	<img src="components/1/header.png" alt="Header"/>
+
+	<h3>What I hope to learn</h3>
+	I hope to learn how to make my navigation bar position where and how I want it to go. Positioning, sizing, floating, and in-line block are the main parts
+	of creating this, which are things I struggle with so I know it will be a challenge.
+
+	<h3>How I feel this relates to what I have learned</h3>
+	Well, I know that a navigation is easy access to the other main components of the website (Contacts, Information, or a gallery). The navigation is
+	one of the nost important parts of the web page to me, because it is the first thing you see other than the logo. I have also learned that there
+	are many different styles of the navigation. I will be using a simple one, but they all accomplish the same thing; allowing the user to navigate quickly and easly.
+
 
 
 </body>
