--- a/index.html
+++ b/index.html
@@ -33,6 +33,21 @@
 	are many different styles of the navigation. I will be using a simple one, but they all accomplish the same thing; allowing the user to navigate quickly and easly.
 
 
+	<!-- Component 2-->
+	<h2>Component 2: Services</h2>
+	<img src="components/2/What we do.png" alt="About Us"/>
+
+	<h3>What I hope to learn</h3>
+	I hope to learn how to better use inline and float. I know that this will be my main objective for most of these
+	components, because it is one of those things that I just don't get. I hope to be able to position the icons
+	where they belong, as well as line up the text "in-line" below.
+
+	<h3>How I feel this relates to what I've learned</h3>
+	I feel this relates to the page that I created in one of my other classes. We were to look at the picture and recreate it
+	through code and I had such a hard time creating the "About us" due to inline and Float, so hopefully this time I will be able
+	to pick it up.
+
+	<!-- Component 3-->
 
 </body>
 </html>
