--- a/index.html
+++ b/index.html
@@ -48,6 +48,29 @@
 	to pick it up.
 
 	<!-- Component 3-->
+	<h2>Component 3: Our Creators</h2>
+	<img src="components/3/Our Creators.png" alt="Our Creators"/>
+
+	<h1>What I hope to learn</h1>
+	This component is similar to the last. I hope to be able to create this and feel confident that I have done it correctly, but also know
+	what I how to do it before drawing up any code.
+
+	<h1>How I feel this relates to what I have learned</h1>
+	I feel that this relates to many of the issues that I have when it comes to coding. Creating a section that shows "Our creators"
+	allows the user to get a feel of who created this page and all about who they are. I like seeing these things on websites because it's interesting
+	to see other developers background.
+
+	<!-- Component 4-->
+	<h2>Component 4: Testimonials</h2>
+	<img src="components/4/Testimonial Pagination.png" alt="Testimonial"/>
+
+	<h1>What I plan to learn</h1>
+	I plan to learn how to align my arrows, images, and text in there correct places. I know that I will still use Float and inline tags.
+	I really love to see testimonials on a website because it really sends a good message to the users or potential buyers.
+
+	<h1>How I fee this relates to what I've learned</h1>
+	This relates to a few things that I've learned, but not many. I have never created a news feed or testimonial section before. I have
+	some experience with making image slide shows so it could be same.
 
 </body>
 </html>
