--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="css/main.css" />
 </head>
 <body>
+
 	<!-- Header -->
 	<h1>Janay Peters</h1>
 		<img src="me.JPG" alt="Janay"/>
@@ -20,6 +21,7 @@
 	<!-- Blog, Components -->
 
 	<!-- Component 1-->
+<div class="Comp1">
 	<h2>Component 1: Header Navigation Bar</h2>
 	<img src="components/1/header.png" alt="Header"/>
 
@@ -31,9 +33,10 @@
 	Well, I know that a navigation is easy access to the other main components of the website (Contacts, Information, or a gallery). The navigation is
 	one of the nost important parts of the web page to me, because it is the first thing you see other than the logo. I have also learned that there
 	are many different styles of the navigation. I will be using a simple one, but they all accomplish the same thing; allowing the user to navigate quickly and easly.
-
+</div>
 
 	<!-- Component 2-->
+<div class="Comp2">
 	<h2>Component 2: Services</h2>
 	<img src="components/2/What we do.png" alt="About Us"/>
 
@@ -46,8 +49,10 @@
 	I feel this relates to the page that I created in one of my other classes. We were to look at the picture and recreate it
 	through code and I had such a hard time creating the "About us" due to inline and Float, so hopefully this time I will be able
 	to pick it up.
+</div>
 
 	<!-- Component 3-->
+<div class="Comp3">
 	<h2>Component 3: Our Creators</h2>
 	<img src="components/3/Our Creators.png" alt="Our Creators"/>
 
@@ -59,8 +64,10 @@
 	I feel that this relates to many of the issues that I have when it comes to coding. Creating a section that shows "Our creators"
 	allows the user to get a feel of who created this page and all about who they are. I like seeing these things on websites because it's interesting
 	to see other developers background.
+</div>
 
 	<!-- Component 4-->
+<div class="Comp4">
 	<h2>Component 4: Testimonials</h2>
 	<img src="components/4/Testimonial Pagination.png" alt="Testimonial"/>
 
@@ -71,6 +78,21 @@
 	<h1>How I fee this relates to what I've learned</h1>
 	This relates to a few things that I've learned, but not many. I have never created a news feed or testimonial section before. I have
 	some experience with making image slide shows so it could be same.
+</div>
+
+	<!-- Component 5-->
+<div class="Comp5">
+	<h2>Component 5: Footer</h2>
+	<img src="components/5/Footer.png" alt="Footer"/>
+
+	<h1>What I plan to learn</h1>
+	I plan on learning how to place the social media icons where they are inline, as well as adding a "back to top" arrow. I love
+	footers and I really feel like they bring the page together with all of the information that most users look for in order to
+	contact your company.
+
+	<h1>How I feel this relates to what I've learned</h1>
+	I feel that this relates to what I have done before. I really think my footer and header are the best things that I know how to do.
+</div>
 
 </body>
 </html>
