--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	<!-- Component 1-->
 <div class="Comp1">
 	<h1>Component 1: Header Navigation Bar</h1>
-	<img src="components/1/header.png" alt="Header"/>
+	<img src="components/1/Header.png" alt="Header"/>
 
 	<h4>What I hope to learn</h4>
 	<p>I hope to learn how to make my navigation bar position where and how I want it to go. Positioning, sizing, floating, and in-line block are the main parts
