--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<!-- About -->
 <div class="about">
 	<h1>About Me</h1>
-		<p> My name is Janay Peters and I currently live in Atlanta,Ga. I was born in Mobile,Al and have lived in Georgia for 8 years now.
+		<p class="myself"> My name is Janay Peters and I currently live in Atlanta,Ga. I was born in Mobile,Al and have lived in Georgia for 8 years now.
 	I love to play tennis and dance; I've had a love for technology my whole life, but didn't know that I wanted to go into Web Design
 	until my sophomore year in high school. I love Full Sail University and am so happy to attend this awesome school.</p>
 </div>
@@ -24,7 +24,7 @@
 
 	<!-- Component 1-->
 <div class="Comp1">
-	<h1>Component 1: Header Navigation Bar</h1>
+	<h2>Component 1: Header Navigation Bar</h2>
 	<img src="components/1/Header.png" alt="Header"/>
 
 	<h4>What I hope to learn</h4>
@@ -39,7 +39,7 @@
 
 	<!-- Component 2-->
 <div class="Comp2">
-	<h1>Component 2: Services</h1>
+	<h2>Component 2: Services</h2>
 	<img src="components/2/What we do.png" alt="About Us"/>
 
 	<h4>What I hope to learn</h4>
@@ -55,7 +55,7 @@
 
 	<!-- Component 3-->
 <div class="Comp3">
-	<h1>Component 3: Our Creators</h1>
+	<h2>Component 3: Our Creators</h2>
 	<img src="components/3/Our Creators.png" alt="Our Creators"/>
 
 	<h4>What I hope to learn</h4>
@@ -70,7 +70,7 @@
 
 	<!-- Component 4-->
 <div class="Comp4">
-	<h1>Component 4: Testimonials</h1>
+	<h2>Component 4: Testimonials</h2>
 	<img src="components/4/Testimonial Pagination.png" alt="Testimonial"/>
 
 	<h4>What I plan to learn</h4>
@@ -94,7 +94,7 @@
 
 	<!-- Component 5-->
 <div class="Comp5">
-	<h1>Component 5: Footer</h1>
+	<h2>Component 5: Footer</h2>
 	<img src="components/5/Footer.png" alt="Footer"/>
 
 	<h4>What I plan to learn</h4>
