--- a/index.html
+++ b/index.html
@@ -4,17 +4,20 @@
 	<title>WSP: Janay Peters</title>
 	<!-- <link rel="stylesheet" type="text/css" href="css/reset.css" /> -->
 	<link rel="stylesheet" type="text/css" href="css/main.css" />
+	<link href='https://fonts.googleapis.com/css?family=Indie+Flower' rel='stylesheet' type='text/css'>
 </head>
 <body>
 
 	<!-- Header -->
 <div class="Me">
 	<h1>Janay Peters</h1>
-		<img src="me.JPG" alt="Janay"/>
+		<div id="img">
+			<img src="me.JPG" alt="Janay"/>
+		</div>
 </div>
 	<!-- About -->
 <div class="about">
-	<h1>About Me</h1>
+	<h2>About Me</h2>
 		<p class="myself"> My name is Janay Peters and I currently live in Atlanta,Ga. I was born in Mobile,Al and have lived in Georgia for 8 years now.
 	I love to play tennis and dance; I've had a love for technology my whole life, but didn't know that I wanted to go into Web Design
 	until my sophomore year in high school. I love Full Sail University and am so happy to attend this awesome school.</p>
