--- a/index.html
+++ b/index.html
@@ -29,22 +29,26 @@
 <div class="Comp1">
 	<h2>Component 1: Header Navigation Bar</h2>
 	<img src="components/1/Header.png" alt="Header"/>
-
+		<form action="components/1/component.html">
+			<input type="submit" value="This is a button link">
+		</form>
 	<h4>What I hope to learn</h4>
-	<p>I hope to learn how to make my navigation bar position where and how I want it to go. Positioning, sizing, floating, and in-line block are the main parts
-	of creating this, which are things I struggle with so I know it will be a challenge.</p>
+		<p>I hope to learn how to make my navigation bar position where and how I want it to go. Positioning, sizing, floating, and in-line block are the main parts
+		of creating this, which are things I struggle with so I know it will be a challenge.</p>
 
 	<h4>How I feel this relates to what I have learned</h4>
-	<p>Well, I know that a navigation is easy access to the other main components of the website (Contacts, Information, or a gallery). The navigation is
-	one of the nost important parts of the web page to me, because it is the first thing you see other than the logo. I have also learned that there
-	are many different styles of the navigation. I will be using a simple one, but they all accomplish the same thing; allowing the user to navigate quickly and easly.</p>
+		<p>Well, I know that a navigation is easy access to the other main components of the website (Contacts, Information, or a gallery). The navigation is
+		one of the nost important parts of the web page to me, because it is the first thing you see other than the logo. I have also learned that there
+		are many different styles of the navigation. I will be using a simple one, but they all accomplish the same thing; allowing the user to navigate quickly and easly.</p>
 </div>
 
 	<!-- Component 2-->
 <div class="Comp2">
 	<h2>Component 2: Services</h2>
 	<img src="components/2/What we do.png" alt="About Us"/>
-
+		<form action="components/2/component.html">
+			<input type="submit" value="This is a button link">
+		</form>
 	<h4>What I hope to learn</h4>
 	<p>I hope to learn how to better use inline and float. I know that this will be my main objective for most of these
 	components, because it is one of those things that I just don't get. I hope to be able to position the icons
@@ -60,7 +64,9 @@
 <div class="Comp3">
 	<h2>Component 3: Our Creators</h2>
 	<img src="components/3/Our Creators.png" alt="Our Creators"/>
-
+		<form action="components/3/component.html">
+			<input type="submit" value="This is a button link">
+		</form>
 	<h4>What I hope to learn</h4>
 	<p>This component is similar to the last. I hope to be able to create this and feel confident that I have done it correctly, but also know
 	what I how to do it before drawing up any code.</p>
@@ -75,7 +81,9 @@
 <div class="Comp4">
 	<h2>Component 4: Testimonials</h2>
 	<img src="components/4/Testimonial Pagination.png" alt="Testimonial"/>
-
+		<form action="components/4/component.html">
+			<input type="submit" value="This is a button link">
+		</form>
 	<h4>What I plan to learn</h4>
 	<p>I plan to learn how to align my arrows, images, and text in there correct places. I know that I will still use Float and inline tags.
 	I really love to see testimonials on a website because it really sends a good message to the users or potential buyers.</p>
@@ -99,7 +107,9 @@
 <div class="Comp5">
 	<h2>Component 5: Footer</h2>
 	<img src="components/5/Footer.png" alt="Footer"/>
-
+		<form action="components/5/component.html">
+			<input type="submit" value="This is a button link">
+		</form>
 	<h4>What I plan to learn</h4>
 	<p>I plan on learning how to place the social media icons where they are inline, as well as adding a "back to top" arrow. I love
 	footers and I really feel like they bring the page together with all of the information that most users look for in order to
