--- a/index.html
+++ b/index.html
@@ -28,108 +28,110 @@
 	<!-- Blog, Components -->
 
 	<!-- Component 1-->
-<article class="Comp1">
-	<h2>Component 1: Header Navigation Bar</h2>
-	<img src="components/1/Header.png" alt="Header"/>
-		<ul class="buttons">
-			<li>
-				<a href="components/1/component.html" target="_blank">View Component</a>
-			</li>
-		</ul>
-	<h4>What I hope to learn</h4>
-		<p>I hope to learn how to make my navigation bar position where and how I want it to go. Positioning, sizing, floating, and in-line block are the main parts
-		of creating this, which are things I struggle with so I know it will be a challenge.</p>
+<section>
+	<article class="Comp1">
+		<h2>Component 1: Header Navigation Bar</h2>
+		<img src="components/1/Header.png" alt="Header"/>
+			<ul class="buttons">
+				<li>
+					<a href="components/1/component.html" target="_blank">View Component</a>
+				</li>
+			</ul>
+		<h4>What I hope to learn</h4>
+			<p>I hope to learn how to make my navigation bar position where and how I want it to go. Positioning, sizing, floating, and in-line block are the main parts
+			of creating this, which are things I struggle with so I know it will be a challenge.</p>
 
-	<h4>How I feel this relates to what I have learned</h4>
-		<p>Well, I know that a navigation is easy access to the other main components of the website (Contacts, Information, or a gallery). The navigation is
-		one of the nost important parts of the web page to me, because it is the first thing you see other than the logo. I have also learned that there
-		are many different styles of the navigation. I will be using a simple one, but they all accomplish the same thing; allowing the user to navigate quickly and easly.</p>
-</article>
+		<h4>How I feel this relates to what I have learned</h4>
+			<p>Well, I know that a navigation is easy access to the other main components of the website (Contacts, Information, or a gallery). The navigation is
+			one of the nost important parts of the web page to me, because it is the first thing you see other than the logo. I have also learned that there
+			are many different styles of the navigation. I will be using a simple one, but they all accomplish the same thing; allowing the user to navigate quickly and easly.</p>
+	</article>
 
-	<!-- Component 2-->
-<article>
-	<h2>Component 2: Services</h2>
-	<img src="components/2/What we do.png" alt="About Us"/>
-		<ul class="buttons">
-			<li>
-				<a href="components/2/component.html" target="_blank">View Component</a>
-			</li>
-		</ul>
-	<h4>What I hope to learn</h4>
-		<p>I hope to learn how to better use inline and float. I know that this will be my main objective for most of these
-		components, because it is one of those things that I just don't get. I hope to be able to position the icons
-		where they belong, as well as line up the text "in-line" below.</p>
+		<!-- Component 2-->
+	<article>
+		<h2>Component 2: Services</h2>
+		<img src="components/2/What we do.png" alt="About Us"/>
+			<ul class="buttons">
+				<li>
+					<a href="components/2/component.html" target="_blank">View Component</a>
+				</li>
+			</ul>
+		<h4>What I hope to learn</h4>
+			<p>I hope to learn how to better use inline and float. I know that this will be my main objective for most of these
+			components, because it is one of those things that I just don't get. I hope to be able to position the icons
+			where they belong, as well as line up the text "in-line" below.</p>
 
-	<h4>How I feel this relates to what I've learned</h4>
-		<p>I feel this relates to the page that I created in one of my other classes. We were to look at the picture and recreate it
-		through code and I had such a hard time creating the "About us" due to inline and Float, so hopefully this time I will be able
-		to pick it up.</p>
-</article>
+		<h4>How I feel this relates to what I've learned</h4>
+			<p>I feel this relates to the page that I created in one of my other classes. We were to look at the picture and recreate it
+			through code and I had such a hard time creating the "About us" due to inline and Float, so hopefully this time I will be able
+			to pick it up.</p>
+	</article>
 
-	<!-- Component 3-->
-<article>
-	<h2>Component 3: Our Creators</h2>
-	<img src="components/3/Our Creators.png" alt="Our Creators"/>
-		<ul class="buttons">
-			<li>
-				<a href="components/3/component.html" target="_blank">View Component</a>
-			</li>
-		</ul>
-	<h4>What I hope to learn</h4>
-		<p>This component is similar to the last. I hope to be able to create this and feel confident that I have done it correctly, but also know
-		what I how to do it before drawing up any code.</p>
+		<!-- Component 3-->
+	<article>
+		<h2>Component 3: Our Creators</h2>
+		<img src="components/3/Our Creators.png" alt="Our Creators"/>
+			<ul class="buttons">
+				<li>
+					<a href="components/3/component.html" target="_blank">View Component</a>
+				</li>
+			</ul>
+		<h4>What I hope to learn</h4>
+			<p>This component is similar to the last. I hope to be able to create this and feel confident that I have done it correctly, but also know
+			what I how to do it before drawing up any code.</p>
 
-	<h4>How I feel this relates to what I have learned</h4>
-		<p>I feel that this relates to many of the issues that I have when it comes to coding. Creating a section that shows "Our creators"
-		allows the user to get a feel of who created this page and all about who they are. I like seeing these things on websites because it's interesting
-		to see other developers background.</p>
-</article>
+		<h4>How I feel this relates to what I have learned</h4>
+			<p>I feel that this relates to many of the issues that I have when it comes to coding. Creating a section that shows "Our creators"
+			allows the user to get a feel of who created this page and all about who they are. I like seeing these things on websites because it's interesting
+			to see other developers background.</p>
+	</article>
 
-	<!-- Component 4-->
-<article class="featured">
-	<h2>Component 4: Testimonials</h2>
-	<img src="components/4/Testimonial Pagination.png" alt="Testimonial"/>
-		<ul class="buttons">
-			<li>
-				<a href="components/4/component.html" target="_blank">View Component</a>
-			</li>
-		</ul>
-	<h4>What I plan to learn</h4>
-		<p>I plan to learn how to align my arrows, images, and text in there correct places. I know that I will still use Float and inline tags.
-		I really love to see testimonials on a website because it really sends a good message to the users or potential buyers.</p>
+		<!-- Component 4-->
+	<article class="featured">
+		<h2>Component 4: Testimonials</h2>
+		<img src="components/4/Testimonial Pagination.png" alt="Testimonial"/>
+			<ul class="buttons">
+				<li>
+					<a href="components/4/component.html" target="_blank">View Component</a>
+				</li>
+			</ul>
+		<h4>What I plan to learn</h4>
+			<p>I plan to learn how to align my arrows, images, and text in there correct places. I know that I will still use Float and inline tags.
+			I really love to see testimonials on a website because it really sends a good message to the users or potential buyers.</p>
 
-	<h4>How I fee this relates to what I've learned</h4>
-		<p>This relates to a few things that I've learned, but not many. I have never created a news feed or testimonial section before. I have
-		some experience with making image slide shows so it could be same.</p>
+		<h4>How I fee this relates to what I've learned</h4>
+			<p>This relates to a few things that I've learned, but not many. I have never created a news feed or testimonial section before. I have
+			some experience with making image slide shows so it could be same.</p>
 
-	<h4>How I might build this</h4>
-		<p>
-			1. Create the component as a (SECTION). <br>
-			2. Section title using (H1) or (H2). <br>
-			3. Testimonials are as (ARTICLE). <br>
-			4. Quotes are (BLOCKQUOTE) containing a (P). <br>
-			5. Pagination created using (UL) and (li). <br>
-			6. Arrows are not content...so use CSS background image. <br>
-		</p>
-</article>
+		<h4>How I might build this</h4>
+			<p>
+				1. Create the component as a (SECTION). <br>
+				2. Section title using (H1) or (H2). <br>
+				3. Testimonials are as (ARTICLE). <br>
+				4. Quotes are (BLOCKQUOTE) containing a (P). <br>
+				5. Pagination created using (UL) and (li). <br>
+				6. Arrows are not content...so use CSS background image. <br>
+			</p>
+	</article>
 
-	<!-- Component 5-->
-<article>
-	<h2>Component 5: Footer</h2>
-	<img src="components/5/Footer.png" alt="Footer"/>
-		<ul class="buttons">
-			<li>
-				<a href="components/5/component.html" target="_blank">View Component</a>
-			</li>
-		</ul>
-	<h4>What I plan to learn</h4>
-		<p>I plan on learning how to place the social media icons where they are inline, as well as adding a "back to top" arrow. I love
-		footers and I really feel like they bring the page together with all of the information that most users look for in order to
-		contact your company.</p>
+		<!-- Component 5-->
+	<article>
+		<h2>Component 5: Footer</h2>
+		<img src="components/5/Footer.png" alt="Footer"/>
+			<ul class="buttons">
+				<li>
+					<a href="components/5/component.html" target="_blank">View Component</a>
+				</li>
+			</ul>
+		<h4>What I plan to learn</h4>
+			<p>I plan on learning how to place the social media icons where they are inline, as well as adding a "back to top" arrow. I love
+			footers and I really feel like they bring the page together with all of the information that most users look for in order to
+			contact your company.</p>
 
-	<h4>How I feel this relates to what I've learned</h4>
-		<p>I feel that this relates to what I have done before. I really think my footer and header are the best things that I know how to do.</p>
-</article>
+		<h4>How I feel this relates to what I've learned</h4>
+			<p>I feel that this relates to what I have done before. I really think my footer and header are the best things that I know how to do.</p>
+	</article>
+</section>
 
 </body>
 </html>
